edit image references

--- a/albow_gardens.html
+++ b/albow_gardens.html
@@ -120,99 +120,99 @@
         </div> -->
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_001 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_001 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_002 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_002 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_003 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_003 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_004 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_004 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_005 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_005 Large.jpeg"/>
         </div>
         <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_006 Large.jpeg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_007 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_008 Large.jpeg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_010 Large.jpeg"/>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_009 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_011 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_012 Large.jpeg"/>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_013 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_014 Large.jpeg"/>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_015 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_016 Large.jpeg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_017 Large.jpeg"/>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_018 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_019 Large.jpeg"/>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_020 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_021 Large.jpeg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_022 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_006 Large.jpeg"/>
             <div></div>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_023 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_007 Large.jpeg"/>
         </div>
         <div class="double">
-            <img scr="/images/Albow Gardens Resized/ALBOW_GARDENS_024 Large.jpeg">
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_025 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_008 Large.jpeg"/>
+            <div></div>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_010 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_009 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_026 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_011 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_012 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_013 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_014 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_015 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_016 Large.jpeg"/>
+            <div></div>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_017 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_018 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_019 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_020 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_027 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_021 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_022 Large.jpeg"/>
+            <div></div>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_028 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_023 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img scr="images/Albow Gardens Resized/ALBOW_GARDENS_024 Large.jpeg">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_025 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_029 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_026 Large.jpeg"/>
         </div>
         <div class="double">
             <div></div>
-            <img src="/images/Albow Gardens Resized/ALBOW GARDENS_030 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_027 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <div></div>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_028 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <div></div>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_029 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <div></div>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_030 Large.jpeg"/>
         </div>
 
         <div class="text">
