--- a/behind_the_bank.html
+++ b/behind_the_bank.html
@@ -38,34 +38,34 @@
      <div id="content">
         <div class="picture-gallery">
             <div class="solo-item">
-                <img src="/FRONT IMAGES/FRONTCOVER_007.jpg" alt="">
+                <img src="FRONT IMAGES copy/FRONTCOVER_007 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_01 Large.jpeg" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_01 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemond_pdf_1.png" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemond_pdf_1.png" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_11 Large.jpeg" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_11 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_2.png" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_2.png" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_3.png" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_3.png" alt="">
             </div>
             <!-- <div class="solo-item">
                 <img src="/11_M LE MONDE - BEHIND THE BANK/mlemond_img_5.png" alt="">
             </div> -->
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemond_img_5 Large.jpeg" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemond_img_5 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_4.png" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_4.png" alt="">
             </div>
             <div class="solo-item">
-                <img src="/11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_5.png" alt="">
+                <img src="11_M LE MONDE - BEHIND THE BANK/mlemonde_pdf_5.png" alt="">
             </div>
         </div>
      </div>
