edit for preview

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
         I miss home.
     </div>
 
-    <h2>Contact</h2>
+    <!-- <h2>Contact</h2>
     <p>iovino.alessandro88@gmail.com</p>
-    <p>alessandro.iovino</p>
+    <p>alessandro.iovino</p> -->
 
 </div>
