--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
 
    <div class="sections">
         <a id="commercials" onclick="toggleBold(this)">Commercials</a>
-        <a id="prints" onclick="toggleBold(this)">Prints</a>
+        <!-- <a id="prints" onclick="toggleBold(this)">Prints</a> -->
         <a id="about" onclick="toggleBold(this)">About</a>
    </div>
 </div>
