cleaned up image sizing

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <div class="picture-gallery">
-    <br>
-    <br>
-    <h2>Bio</h2>
+    <!-- <br> -->
+    <!-- <br> -->
+    <!-- <h2>Bio</h2> -->
     
     <!-- <p>I must have been 4 or 5, we were living all together, under the same roof - my mum and my dad, my brother 
         and my sisters, the dogs, and my nanny Caterina, this is the best memory I have.</p>
@@ -16,25 +16,29 @@
     <p>
         I miss home. 
     </p> -->
-    <div class="text">
-        I must have been 4 or 5, we were living all together, under the same roof - my mum and my dad, my brother and my sisters, the dogs, and my nanny Caterina, this is the best memory I have.
-        <br>
-        After that, I remember the fights, the few days spent with my father, and the lies.
-        <br>
-        Since then, I've always had the feeling that my family lied to me, mostly for a little courage.
-        <br>
-        I lived most of my life with one person, my mother.
-        <br>
-        Most of who I am today is because of her and because of her, I had to run away.
-        <br>
-        The people I've surrounded me with helped me to understand what kind of truth I needed; photography helped me to keep track of it.
-        <br>
-        Today what makes me happy is knowing t that whatever I do, is done with certain honesty. 
-        <br>
-        Today I feel I'm in a much better place than I was, I feel I don't have to run anymore.
-        <br>
-        <br>
-        I miss home.
+    <div class="photo-column">
+        <div class="solo-item">
+            <div class="text">
+                I must have been 4 or 5, we were living all together, under the same roof - my mum and my dad, my brother and my sisters, the dogs, and my nanny Caterina, this is the best memory I have.
+                <br>
+                After that, I remember the fights, the few days spent with my father, and the lies.
+                <br>
+                Since then, I've always had the feeling that my family lied to me, mostly for a little courage.
+                <br>
+                I lived most of my life with one person, my mother.
+                <br>
+                Most of who I am today is because of her and because of her, I had to run away.
+                <br>
+                The people I've surrounded me with helped me to understand what kind of truth I needed; photography helped me to keep track of it.
+                <br>
+                Today what makes me happy is knowing t that whatever I do, is done with certain honesty. 
+                <br>
+                Today I feel I'm in a much better place than I was, I feel I don't have to run anymore.
+                <br>
+                <br>
+                I miss home.
+            </div>
+        </div>
     </div>
 
     <!-- <h2>Contact</h2>
