--- a/albow_gardens.html
+++ b/albow_gardens.html
@@ -1,8 +1,9 @@
 
 <div class="picture-gallery">
     <div class="photo-column">
-        <div class="text">
-            <br>
+        
+        <!-- option 1 -->
+        <!-- <div class="text">
             <br>
             Large families need to be held together. 
             <br>
@@ -18,106 +19,6 @@
             <br>
             <br>
         </div>
-        <!-- <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_001.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_002.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/projects/charlie19/0072093-0011_FINAL.jpg" alt="">
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_003.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_004.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_005.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_006.jpg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_007.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_008.jpg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_010.jpg"/>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_009.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_011.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_012.jpg"/>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_013.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_014.jpg"/>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_015.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_016.jpg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_017.jpg"/>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_018.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_019.jpg"/>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_020.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_021.jpg"/>
-        </div>
-        <div class="double">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_022.jpg"/>
-            <div></div>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_023.jpg"/>
-        </div>
-        <div class="double">
-            <img scr="/images/Albow Gardens/ALBOW_GARDENS_024.jpg">
-            <img src="/images/Albow Gardens/ALBOW GARDENS_025.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_026.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_027.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_028.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_029.jpg"/>
-        </div>
-        <div class="double">
-            <div></div>
-            <img src="/images/Albow Gardens/ALBOW GARDENS_030.jpg"/>
-        </div> -->
         <div class="double">
             <div></div>
             <img src="images/Albow Gardens Resized/ALBOW GARDENS_001 Large.jpeg"/>
@@ -187,11 +88,11 @@
             <div></div>
         </div>
         <div class="double">
-            <div></div>
             <img src="images/Albow Gardens Resized/ALBOW GARDENS_023 Large.jpeg"/>
+            <div></div>
         </div>
         <div class="double">
-            <img scr="images/Albow Gardens Resized/ALBOW_GARDENS_024 Large.jpeg">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_024_Large.jpeg" alt="">
             <img src="images/Albow Gardens Resized/ALBOW GARDENS_025 Large.jpeg"/>
         </div>
         <div class="double">
@@ -213,46 +114,149 @@
         <div class="double">
             <div></div>
             <img src="images/Albow Gardens Resized/ALBOW GARDENS_030 Large.jpeg"/>
+        </div> -->
+
+        <!-- option 2 -->
+        <div class="single">
+            <!-- <div></div> -->
+            <div>
+                <div class="text">
+                    <br>
+                    Large families need to be held together. 
+                    <br>
+                    <br>
+                    I have been trying my whole life. 
+                    <br>
+                    For others, 
+                    <br>
+                    for me. 
+                    <br>
+                    <br>
+                    I don’t sleep. 
+                    <br>
+                    <br>
+                </div>
+            </div>
         </div>
-
-        <div class="text">
-            Located in the northern suburbs of Cape Town, Albow Gardens is a block of council housing  encircled by a nearly two-metre-high iron fence dividing the community within it from the  neighborhood surrounding it. 
-            During Apartheid, these pastel-coloured buildings, with big black letters painted on them were  used as dormitories by Air Force soldiers at Ysterplaat military base, which borders the eastern  perimeter of the district. 
-            <br>
-            <br>
-            I ended up in Albow Gardens by accident, looking for a story to tell, something to photograph. I let myself be attracted by those buildings so foreign to me. 
-            <br>
-            <br>
-            I first got in thanks to Natty. While sweeping leaves from the pathway, intrigued, she called me to  her.  
-            At the time Albow Gardens could have been everything I was looking for or nothing at all, but I  didn’t know yet.
-            <br>
-            <br>   
-            In Albow Gardens I also met Cecil, Bianca, and their children. I was wandering through the  buildings, when I saw Cecil looking at me from the third-floor landing of block G. From where I was standing he looked like a giant, I remember thinking, but we smiled at each  other. 
-            Meeting Cecil and his family was one of those special encounters that life sometimes throws at  you and that turns everything upside down, one of those encounters that changes the way you  feel and see things. 
-            <br>
-            <br>
-            I spent almost three years inside Albow Gardens. When I was there nothing else mattered, time  flowed at its own speed.  
-            I realised what that place meant to me only years after I had stopped being there. 
-            <br>
-            <br>
-            For a very long time I tried to find within my photographs, the story I was first looking for, when I  first saw that fence and those buildings, and yet, I couldn’t find it. 
-            I did not want to see what I had found instead.  
-            I never felt that sense of enoughness, of warmth and connection, like I felt when I was in Albow  Gardens. Only now I realize that that was all I had always been looking for. 
-            <br>
-            <br>
-            Albow Gardens is a place made by things and people like any others, but a place where  everything felt closer to me, a place where everything felt more real.
-            In Albow Gardens I could always be myself, without having to be anyone else, without having to  hold anyone together. 
-            <br>
-            <br>
-            Within this community I met so many people that welcomed and trusted me and my intentions,  when my intentions were still unclear. 
-            <br>
-            <br>
-            I thank them, one by one, for understanding and trusting me without really knowing who I was,  and why I was there. 
-            I especially thank Cecil and Bianca and their amazing children for teaching me a different way of  looking at things. 
-            <br>
-            <br>
-            This is going to last forever.
-
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_001 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_002 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_003 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_004 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_005 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_006 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_007 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_008 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_010 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_009 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_011 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_012 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_013 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_014 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_015 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_016 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_017 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_018 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_019 Large.jpeg"/>
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_020 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_021 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_022 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_023 Large.jpeg"/>
+        </div>
+        <div class="double">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_024_Large.jpeg" alt="">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_025 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_026 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_027 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_028 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_029 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <img src="images/Albow Gardens Resized/ALBOW GARDENS_030 Large.jpeg"/>
+        </div>
+        <div class="single">
+            <div class="text">
+                Located in the northern suburbs of Cape Town, Albow Gardens is a block of council housing encircled by a nearly two-metre-high iron fence dividing the community within it from the neighborhood surrounding it.
+                During Apartheid, these pastel-coloured buildings, with big black letters painted on them were used as dormitories by Air Force soldiers at Ysterplaat military base, which borders the eastern perimeter of the district. 
+                <br>
+                <br>
+                I ended up in Albow Gardens by accident, looking for a story to tell, something to photograph, something to believe in.
+                I let myself be attracted by those buildings so foreign to me. 
+                I first got in thanks to Natty. While sweeping leaves from the pathway, intrigued, she called me to her. 
+                At the time Albow Gardens could have been everything I was looking for or nothing at all, but I didn’t know yet. 
+                <br>
+                <br>
+                In Albow Gardens I also met Cecil, Bianca, and their children. I was wandering through the buildings, when I saw Cecil looking at me from the third-floor landing of block G. 
+                From where I was standing he looked like a giant, I remember thinking, but we smiled at each other. 
+                Meeting Cecil and his family was one of those special encounters that life sometimes throws at you and that turns everything upside down, one of those encounters that changes the way you feel and see things. 
+                <br>
+                <br>   
+                In Albow Gardens I also met Cecil, Bianca, and their children. I was wandering through the  buildings, when I saw Cecil looking at me from the third-floor landing of block G. From where I was standing he looked like a giant, I remember thinking, but we smiled at each  other. 
+                Meeting Cecil and his family was one of those special encounters that life sometimes throws at  you and that turns everything upside down, one of those encounters that changes the way you  feel and see things. 
+                <br>
+                <br>
+                I spent almost three years inside Albow Gardens. When I was there nothing else mattered, time  flowed at its own speed.  
+                <br>
+                <br>
+                I never felt that sense of enoughness, of warmth and connection, like I felt when I was in Albow Gardens. I have never felt that trust before.
+                Only later I realized that that was all I had always been looking for.
+                <br>
+                <br>
+                Albow Gardens is a place made of things and people like any others, but a place where everything felt closer to me, a place where everything felt more real.
+                In Albow Gardens I could always be myself, without having to be anyone else, without having to hold anyone together. 
+                <br>
+                <br>
+                Within this community, I met so many people that welcomed and trusted me and my intentions, when my intentions were still unclear. 
+                <br>
+                <br>
+                I thank them, one by one, for understanding and trusting me without really knowing who I was, and why I was there.
+                I especially thank Cecil and Bianca and their amazing children for teaching me a different way of looking at things.
+                <br>
+                This is going to last forever.
+                
+            </div>
         </div>
     </div>
 </div>
