--- a/behind_the_bank.html
+++ b/behind_the_bank.html
@@ -7,21 +7,24 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy:ital@0;1&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- left side of the screen -->
     <div id="nav">
         <div class="nav-bar">
 
-            <div class="title">
-                <h1>Alessandro Iovino</h1>
+            <!-- <div class="title">
+                <h2>ALESSANDRO IOVINO</h2>
             </div>
-            
-            <a id="commercials" onclick="goBackCommercials()"><</a>
+            <br>
+            <a id="commercials" onclick="goBackCommercials()"><</a> -->
 
             <div class="commercial-title">
-                <h2>Le Monde - Behind the Bank</h2>
+                <h3>M Le Monde</h3>
+                <h3>Behind the Bank</h3>
             </div>
            <!-- <div class="titles">
                 <a id="albowGardens" onclick="toggleBold(this)">Albow Gardens</a>
@@ -40,13 +43,13 @@
             <div class="solo-item">
                 <img src="FRONT IMAGES copy/FRONTCOVER_007 Large.jpeg" alt="">
             </div>
-            <div class="solo-item">
+            <div class="solo-item wide">
                 <img src="11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_01 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
                 <img src="11_M LE MONDE - BEHIND THE BANK/mlemond_pdf_1.png" alt="">
             </div>
-            <div class="solo-item">
+            <div class="solo-item wide">
                 <img src="11_M LE MONDE - BEHIND THE BANK/MMAGAZINE_11 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
@@ -58,7 +61,7 @@
             <!-- <div class="solo-item">
                 <img src="/11_M LE MONDE - BEHIND THE BANK/mlemond_img_5.png" alt="">
             </div> -->
-            <div class="solo-item">
+            <div class="solo-item wide">
                 <img src="11_M LE MONDE - BEHIND THE BANK/mlemond_img_5 Large.jpeg" alt="">
             </div>
             <div class="solo-item">
