--- a/commercials.html
+++ b/commercials.html
@@ -155,74 +155,75 @@
        <div class="commercial-photo-column">
         <div class="commercial-item" id="boden">
             <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_001 Large.jpeg"/></a>
-            <h2>Boden</h2>
+            <h2>BODEN</h2>
         </div>
         <div class="commercial-item" id="calliope">
             <a href="/commercials/Calliope.html"><img src="FRONT IMAGES copy/FRONTCOVER_004 Large.jpeg"/></a>
-            <h2>Calliope</h2>
+            <h2>CALLIOPE</h2>
         </div>
         <div class="commercial-item" id="we-are-shoe">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_009 Large.jpeg"/></a>
-            <h2>We are shoe</h2>
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_009 Large.jpeg"/></a>
+            <h2></h2>
         </div>
-        <div class="commercial-item" id="bobo">
+        <div class="commercial-item" id="oakley">
             <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_010 Large.jpeg"/></a>
-            <h2>Bobo</h2>
+            <h2>OAKLEY</h2>
         </div>
-        <div class="commercial-item" id="lozza-occhiali">
+        <div class="commercial-item" id="numero-homme">
             <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_016 Large.jpeg"/></a>
-            <h2>Lozza Occhiali</h2>
+            <h2>NUMERO HOMME</h2>
         </div>
          
     </div>
 
     <div class="commercial-photo-column">
-        <div class="commercial-item" id="mlemonde">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_002 Large.jpeg"/></a>
-            <h2>Massimo Bottura - M le Monde</h2>
+        <div class="commercial-item" id="massimo-bottura">
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_002 Large.jpeg"/></a>
+            <h2>M LE MONDE MASSIMO BOTTURA</h2>
         </div>
-        <div class="commercial-item" id="NFKids">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_005 Large.jpeg"/></a>
-            <h2>Miro & Wren</h2>
+        <div class="commercial-item" id="">
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_005 Large.jpeg"/></a>
+            <h2>MIRO & WREN</h2>
         </div>
-        <div class="commercial-item" id="vild">
+        <div class="commercial-item" id="behindthebank">
             <a href="/behind_the_bank.html"><img src="FRONT IMAGES copy/FRONTCOVER_007 Large.jpeg"/></a>
-            <h2>Le Monde - Behind the bank</h2>
+            <h2>M LE MONDE BEHIND THE BANK</h2>
         </div>
-        <div class="commercial-item" id="librino">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_011 Large.jpeg"/></a>
-            <h2>Librino - Biennale di Venezia</h2>
+        <div class="commercial-item" id="NF">
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_015 Large.jpeg"/></a>
+            <h2>THE NORTH FACE</h2>
         </div>
-         <div class="commercial-item" id="lozza-occhiali">
+       
+         <div class="commercial-item" id="13">
              <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_013 Large.jpeg"/></a>
-             <h2>Lozza Occhiali</h2>
+             <h2></h2>
          </div>
         <div class="commercial-item" id="thatch">
-            <a href="/commercials/Thatch.html"><img src="FRONT IMAGES copy/FRONTCOVER_014 Large.jpeg"/></a>
-            <h2>Tatch</h2>
+            <a href="/commercials/Thatch.html"><img src="FRONT IMAGES copy/FRONTCOVERWB_014 Large.jpeg"/></a>
+            <h2>THATCH</h2>
         </div> 
     </div>
 
     <div class="commercial-photo-column">
         <div class="commercial-item" id="scimparello">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_003 Large.jpeg"/></a>
-            <h2>Scimparello Magazine</h2>
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_003 Large.jpeg"/></a>
+            <h2>SCIMPARELLO MAGAZINE</h2>
         </div>
         <div class="commercial-item" id="NF-minime">
             <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_006 Large.jpeg"/></a>
-            <h2>The North Face - Minime</h2>
+            <h2>THE NORTH FACE MINIME</h2>
         </div>
-        <div class="commercial-item" id="Oakley">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_008 Large.jpeg"/></a>
-            <h2>Oakley</h2>
+        <div class="commercial-item" id="house-of-V">
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_008 Large.jpeg"/></a>
+            <h2>HOUSE OF VILD</h2>
         </div>
-        <div class="commercial-item" id="behindthebank">
+        <div class="commercial-item" id="lozza-occhiali">
             <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_012 Large.jpeg"/></a>
-            <h2>M Le Monde - Behind the bank</h2>
+            <h2>LOZZA OCCHIALI</h2>
         </div>
-        <div class="commercial-item" id="nummero-homme">
-            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVER_015 Large.jpeg"/></a>
-            <h2>Nummero Homme - KHAYELITSHA</h2>
+        <div class="commercial-item" id="bobo">
+            <a href="/"><img src="FRONT IMAGES copy/FRONTCOVERWB_011 Large.jpeg"/></a>
+            <h2>BOBO</h2>
         </div>
     </div>
     </div>
