--- a/home.html
+++ b/home.html
@@ -1,5 +1,7 @@
 <div class="home-picture-gallery">
     <div class="solo-item">
-        <img src="images/SILVERFASTSCAN_092_FINAL.jpg" alt="">
+        <!-- <img src="images/SILVERFASTSCAN_092_FINAL.jpg" alt=""> -->
+        <img src="11_M LE MONDE - BEHIND THE BANK/mlemond_img_5 Large.jpeg" alt="">
+
     </div>
 </div>
