Add Mama didn't raise me this way project and fix formatting

--- a/nav.html
+++ b/nav.html
@@ -1,31 +1,22 @@
 <div class="nav-bar">
 
     <div class="title">
-        <!-- <h1>Alessandro</h1>
-        <h1>Iovino</h1> -->
         <h2>ALESSANDRO IOVINO</h2>
-        <!-- <h2>IOVINO</h2> -->
-        <!-- <h2>Alessandro</h2>
-        <h2>Iovino</h2> -->
-        <!-- <h2>ALESSANDRO IOVINO</h2> -->
     </div>
     
    <div class="titles">
         <a id="albowGardens" onclick="toggleBold(this)">Albow Gardens</a>
-        <!-- <a id="albowGardens" onclick="toggleBold(this)">Mum Didn't Raise Me This Way</a> -->
-        
-   <!-- </div> -->
-
-   <!-- <div class="sections"> -->
+        <br>
+        <a id="mama" onclick="toggleBold(this)">Mama Didn't Raise Me This Way</a>
+        <br>
         <a id="commercials" onclick="toggleBold(this)">Commercials</a>
-        <!-- <a id="prints" onclick="toggleBold(this)">Prints</a> -->
          <br>
         <a id="about" onclick="toggleBold(this)">About</a>
    </div>
 
    <div class="icons">
-     <img href="#" id="instagramButton" src="icons/2515843_black and white_dark grey_instagram_icon.png" alt="">
-     <img href="#" id="emailButton" src="icons/678145_email_envelope_inbox_mail_icon.png" alt="">
+     <img href="#" id="instagramButton" src="icons/instagram_icon.png" alt="">
+     <img href="#" id="emailButton" src="icons/email_icon.png" alt="">
    </div>
 </div>
 
